# my-cv

./: .gitignore  Dockerfile-frontend  Pipfile  Procfile  axios.js  docker-compose.yml  heroku.yml  package-lock.json  package.json  readme.MD  requirements.txt
backend/: .gitignore  Dockerfile  Dockerfile-backend  Procfile  db.sqlite3  db_dump.json  pyproject.toml  requirements.txt
backend/core/: __init__.py  asgi.py  celery.py  middleware.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
backend/core/settings/: common.py  dev.py  prod.py
backend/cv/: admin.py  models.py  plot_view.py  serializers.py  urls.py  validators.py  views.py
backend/cv/management/commands/: export_cv_to_csv.py  export_cv_to_csv_long.py  export_cv_to_csv_short.py  seed_db.py
backend/cv/migrations/: 0001_initial.py  0002_alter_education_end_date_alter_experience_end_date.py  0003_education_institution_experience_company.py  0004_alter_education_grade.py  0005_education_ranking_experience_ranking.py  0006_remove_experience_description_experiencedescription.py  0007_educationdescription.py  0008_remove_education_description.py  0009_education_subtitle_experience_role_and_more.py  0010_education_role.py  0011_educationimage_experienceimage.py  0012_alter_educationimage_image_and_more.py
backend/cv/static/cv/: style.css
frontend/: Dockerfile  package-lock.json  package.json
frontend/cv-frontend/: package.json
frontend/cv-frontend/public/: index.html
touchdesigner_plotter/: cv_timeseries.csv  history_plotter.3.toe  history_plotter.4.toe  history_plotter.8.toe  history_plotter.toe
(+4 files in other folders)
