[tool.poetry]
name = "my-cv"
version = "0.1.0"
description = ""
authors = ["Tommaso Ramella <tommaso.ramella90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
django = "^5.1"
gunicorn = "^23.0.0"
numpy = "^2.1.0"
pillow = "^10.4.0"
redis = "^5.0.8"
psycopg2-binary = "^2.9.9"
plotly = "^5.23.0"
requests = "^2.32.3"
celery = "^5.4.0"
django-cors-headers = "^4.4.0"
djangorestframework = "^3.15.2"
dj-database-url = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
